classDiagram
    direction TB

    %% ====== Enums ======
    class SyncStatus {
        <<enum>>
        PENDING
        SYNCING
        SYNCED
        FAILED
    }

    class SyncOperationType {
        <<enum>>
        MESSAGE_MARK_READ
        MESSAGE_MARK_ALL_READ
        WORKFLOW_APPROVE
    }

    class HttpMethod {
        <<enum>>
        GET
        POST
        PUT
        DELETE
    }

    %% ====== Entities ======
    class BaseEntity {
        <<abstract>>
        +id: Long
        +createdAt: Long
        +updatedAt: Long
        +syncStatus: SyncStatus
    }

    class SyncQueueEntity {
        +operationType: SyncOperationType
        +method: HttpMethod
        +path: String
        +payload: String
        +retryCount: Int
        +maxRetry: Int
        +lastError: String?
        +entityId: Long?
        +queuedAt: Long
    }

    class WorkflowCacheEntity {
        +taskConfigId: Long?
        +taskCode: String?
        +taskName: String?
        +initiatorName: String?
        +currentNodeName: String?
        +status: Int?
        +startTime: String?
        +category: String
        +cacheTime: Long
    }

    class MessageCacheEntity {
        +senderName: String?
        +messageType: String?
        +title: String?
        +content: String?
        +linkUrl: String?
        +msgStatus: Int?
        +createTime: String?
        +readTime: String?
        +category: String
        +cacheTime: Long
    }

    BaseEntity <|-- SyncQueueEntity
    BaseEntity <|-- WorkflowCacheEntity
    BaseEntity <|-- MessageCacheEntity

    %% ====== DAOs ======
    class BaseDao~T~ {
        <<interface>>
        +insert(entity: T): Long
        +update(entity: T)
        +delete(entity: T)
        +findById(id: Long): T?
    }

    class SyncQueueDao {
        +findByStatus(status: SyncStatus): List~SyncQueueEntity~
        +findPending(limit: Int): List~SyncQueueEntity~
        +updateStatus(id: Long, status: SyncStatus)
        +incrementRetry(id: Long, error: String)
        +deleteSynced()
        +countByStatus(status: SyncStatus): Flow~Int~
        +markSyncing(ids: List~Long~)
    }

    class WorkflowCacheDao {
        +findByCategory(category: String): Flow~List~WorkflowCacheEntity~~
        +replaceAll(category: String, items: List~WorkflowCacheEntity~)
        +clearByCategory(category: String)
        +getCacheTime(category: String): Long?
    }

    class MessageCacheDao {
        +findByCategory(category: String): Flow~List~MessageCacheEntity~~
        +replaceAll(category: String, items: List~MessageCacheEntity~)
        +markRead(id: Long)
        +markAllRead()
        +clearByCategory(category: String)
    }

    BaseDao <|-- SyncQueueDao
    BaseDao <|-- WorkflowCacheDao
    BaseDao <|-- MessageCacheDao

    %% ====== Database ======
    class ForgexDatabase {
        <<@Database>>
        +syncQueueDao(): SyncQueueDao
        +workflowCacheDao(): WorkflowCacheDao
        +messageCacheDao(): MessageCacheDao
    }

    %% ====== Converters ======
    class Converters {
        <<@TypeConverters>>
        +fromTimestamp(value: Long?): LocalDateTime?
        +toTimestamp(date: LocalDateTime?): Long?
        +fromStringMap(value: String?): Map~String, String~
        +toStringMap(map: Map~String, String~?): String
    }

    ForgexDatabase ..> Converters : @TypeConverters
    ForgexDatabase ..> SyncQueueEntity : entities
    ForgexDatabase ..> WorkflowCacheEntity : entities
    ForgexDatabase ..> MessageCacheEntity : entities

    %% ====== Sync Logic ======
    class NetworkMonitor {
        -context: Context
        -connectivityManager: ConnectivityManager
        +isOnline: Flow~Boolean~
        +isCurrentlyOnline(): Boolean
        +register()
        +unregister()
    }

    class ConflictResolver {
        <<interface>>
        +resolve(local: SyncQueueEntity, serverResponse: Response): ConflictResult
    }

    class LwwConflictResolver {
        +resolve(local: SyncQueueEntity, serverResponse: Response): ConflictResult
    }

    ConflictResolver <|.. LwwConflictResolver

    class SyncWorker {
        <<@HiltWorker>>
        -syncQueueDao: SyncQueueDao
        -okHttpClient: OkHttpClient
        -retrofit: Retrofit
        -conflictResolver: ConflictResolver
        +doWork(): Result
        -executeOperation(entity: SyncQueueEntity): Boolean
        -buildRequest(entity: SyncQueueEntity): Request
        -handleResponse(entity: SyncQueueEntity, response: Response): Boolean
    }

    class SyncCoordinator {
        -syncQueueDao: SyncQueueDao
        -workManager: WorkManager
        -networkMonitor: NetworkMonitor
        +enqueue(operation: SyncOperation): Long
        +triggerImmediateSync()
        +schedulePeriodicSync()
        +observePendingCount(): Flow~Int~
        -onNetworkRestored()
    }

    class SyncManager {
        -coordinator: SyncCoordinator
        +enqueueReadReceipt(messageId: Long)
        +enqueueMarkAllRead()
        +triggerSync()
        +observeSyncState(): Flow~SyncState~
        +isOnline(): Boolean
    }

    SyncCoordinator --> SyncQueueDao
    SyncCoordinator --> WorkManager
    SyncCoordinator --> NetworkMonitor
    SyncManager --> SyncCoordinator
    SyncWorker --> SyncQueueDao
    SyncWorker --> OkHttpClient
    SyncWorker --> ConflictResolver

    %% ====== Hilt Modules ======
    class DatabaseModule {
        <<@Module>>
        +provideForgexDatabase(context): ForgexDatabase
        +provideSyncQueueDao(db): SyncQueueDao
        +provideWorkflowCacheDao(db): WorkflowCacheDao
        +provideMessageCacheDao(db): MessageCacheDao
    }

    class SyncModule {
        <<@Module>>
        +provideNetworkMonitor(context): NetworkMonitor
        +provideConflictResolver(): ConflictResolver
        +provideSyncCoordinator(...): SyncCoordinator
        +provideSyncManager(...): SyncManager
        +provideWorkManager(context): WorkManager
    }

    DatabaseModule ..> ForgexDatabase
    SyncModule ..> SyncManager
